# MusicB

./: Cargo.toml  README.md  build.rs  changes_log.jsonl
frontend/: app.slint  icons.slint  modules.slint
frontend/components/: add_dialog.slint  cards.slint  frame_view.slint  navgation_bar.slint  settings_card.slint  sidebar.slint  task_list.slint
frontend/views/: download_view.slint  library_view.slint  queue_view.slint  settings_view.slint  space_view.slint
frontend/views/download_views/: create_task_editor.slint  create_task_query.slint  create_task_view.slint  task_list_view.slint
src/: app_state.rs  event_loop.rs  frontend.rs  handlers.rs  main.rs  watcher.rs
src/bilibili/: collection.rs  downloader.rs  mod.rs  modules.rs  task_modules.rs  utils.rs  video.rs  wbi_generater.rs
src/modules/: modules.rs
