# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "material-gallery"
version = "1.11.0"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
publish = false
license = "MIT"

# [lib]
# crate-type = ["lib", "cdylib"]
# path = "src/lib.rs"
# name = "gallery_lib"

[[bin]]
path = "src/main.rs"
name = "material_gallery"

[dependencies]
slint = { version = "1.11", features = ["backend-android-activity-06"] }
notify = "8.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
num_enum = "0.7.4"
md5 = "0.8.0"
rand_agents = "1.0.0"
chrono = "0.4.41"
futures-util = "0.3.31"
image = "0.25.6"
once_cell = "1.21.3"
regex = "1.11.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = { version = "1.11"  }

[package.metadata.android]
package = "dev.slint.material"
apk_name = "slint_material"

[package.metadata.android.application]
label = "Slint Material"
